Applied proper code styling.